fixes to z-docker-opam example (#379)
* any

* Clean up Dockerfile

* README.md

* Readd docker-compose.yml

* Do not automatically restart container

---------

Co-authored-by: Sebastian Willenbrink <sebastian.willenbrink@tngtech.com>

--- a/example/z-docker-opam/Dockerfile
+++ b/example/z-docker-opam/Dockerfile
@@ -1,24 +1,24 @@
-FROM ocaml/opam:alpine as build
-
-# Install system dependencies
-RUN sudo apk add --update libev-dev openssl-dev
+# Build Stage
+FROM ocaml/opam:alpine AS build
 
 WORKDIR /home/opam
 
+# Install system dependencies
+RUN sudo apk add --update --no-cache libev-dev openssl-dev gmp-dev
+
 # Install dependencies
-ADD hello.opam hello.opam
+COPY z-docker-opam.opam z-docker-opam.opam
 RUN opam install . --deps-only
 
 # Build project
-ADD . .
+COPY . .
 RUN opam exec -- dune build
 
+# Run Stage
+FROM alpine:latest AS run
 
-
-FROM alpine:3.18.4 as run
-
-RUN apk add --update libev
+RUN apk add --update --no-cache libev
 
 COPY --from=build /home/opam/_build/default/app.exe /bin/app
 
-ENTRYPOINT /bin/app
+ENTRYPOINT [ "/bin/app" ]
