--- a/example/z-docker-opam/docker-compose.yml
+++ b/example/z-docker-opam/docker-compose.yml
@@ -1,10 +1,6 @@
-version: "3"
-
 services:
-  web:
-    build: .
-    ports:
-      - "80:8080"
-    restart: always
-    logging:
-      driver: ${LOGGING_DRIVER:-json-file}
+    dream:
+        build: .
+        container_name: dream-example
+        ports:
+            - 8080:8080
